<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ImageView
        android:id="@+id/imgDetail"
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/txtDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/name_of_drinks"
        android:textSize="30sp"
        android:textColor="@color/colorTitle"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txtStringType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/typesString"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDetailType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/txtStringType"
            android:text="@string/name_of_drinks"
            android:textSize="20sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtDetailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/name_of_drinks"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txtStringPriceS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_s"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDetailPriceS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/txtStringPriceS"
            android:text="@string/_5_00"
            android:textColor="@color/colorTitle"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txtStringPriceM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_m"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDetailPriceM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/txtStringPriceM"
            android:text="@string/_5_00"
            android:textColor="@color/colorTitle"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txtStringPriceL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pricel"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDetailPriceL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/txtStringPriceL"
            android:text="@string/_5_00"
            android:textColor="@color/colorTitle"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>